--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,36 @@
-# the composer package lock file and install directory
-# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# /composer.lock
-/fuel/vendor
-
-# the fuelphp document
-/docs/
-
-# you may install these packages with `oil package`.
-# http://fuelphp.com/docs/packages/oil/package.html
-# /fuel/packages/auth/
-# /fuel/packages/email/
-# /fuel/packages/oil/
-# /fuel/packages/orm/
-# /fuel/packages/parser/
-
-# dynamically generated files
-/fuel/app/logs/*/*/*
-/fuel/app/cache/*/*
-/fuel/app/config/crypt.php
-
 # ignore cache & db files
 docker/**/data/
+
+# temp files from editors
+*~
+*.bak
+.DS_Store
+.buildpath
+.project
+.settings
+*.tmproj
+build
+.idea
+nbproject/
+
+# hidden files created by Windows
+Thumbs.db
+desktop.ini
+
+# the composer package lock file and install directory
+src/composer.lock
+src/fuel/vendor
+
+# any of the fuel packages installed by default
+docs/
+src/fuel/core/
+src/fuel/packages/auth/
+src/fuel/packages/email/
+src/fuel/packages/oil/
+src/fuel/packages/orm/
+src/fuel/packages/parser/
+
+# dynamically generated files
+src/fuel/app/logs/*/*/*
+src/fuel/app/cache/*/*
+src/fuel/app/config/crypt.php
