--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -16,7 +16,7 @@ server {
     location ~ \.php$ {
         try_files                $uri = 404;
         include                  /etc/nginx/fastcgi_params;
-        fastcgi_pass             php:9000;
+        fastcgi_pass             fuel_php:9000;
 
         fastcgi_index            index.php;
         fastcgi_split_path_info  ^(.+\.php)(/.+)$;
