add package to dockerfile

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:7.4.6-fpm
 
 RUN apt-get update \
- && apt-get install -y git curl libmcrypt-dev zip unzip \
+ && apt-get install -y git curl libmcrypt-dev zip unzip default-mysql-client \
  && curl https://get.fuelphp.com/oil | sh
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
