--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,9 +1,17 @@
 FROM php:7.4.6-fpm
 
-RUN apt-get update \
- && apt-get install -y git curl libmcrypt-dev zip unzip default-mysql-client \
- && curl https://get.fuelphp.com/oil | sh
+ENV COMPOSER_ALLOW_SUPERUSER=1 \
+    COMPOSER_HOME=/composer
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-WORKDIR /var/www/html
+RUN apt-get update \
+ && apt-get install -y \
+    git \
+    curl \
+    libmcrypt-dev \
+    zip \
+    unzip \
+    libzip-dev \
+    default-mysql-client \
+ && curl https://get.fuelphp.com/oil | sh
